--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -2988,10 +2988,13 @@ body {
 }
 @media (max-width: 1440px) {
   #mainPage #game .game-detail .content {
-    height: calc((100svw - 7.5rem - 3.5rem) * 0.6 * 0.6);
+    height: calc((100svw - 7.5rem - 3.5rem) * 0.6 * 0.6 + 1.25rem);
   }
 }
 @media (max-width: 1280px) {
+  #mainPage #game .game-detail .content {
+    height: calc((100svw - 7.5rem - 3.5rem) * 0.6 * 0.6 + 2.5rem);
+  }
   #mainPage #game .game-detail .content .awards .award-list {
     height: 3.75rem;
     min-height: 3.75rem;
