--- a/pre/scss/pages/_game.scss
+++ b/pre/scss/pages/_game.scss
@@ -82,6 +82,7 @@
             gap: size(20);
             height: calc((size(1440) - size(28)*2) * .6 * .6);
             // (container - card padding) * game-zone flex * height ratio
+            overflow: hidden;
 
             .desc {
                 flex: 100%;
@@ -102,6 +103,7 @@
             }
 
             .awards {
+                flex: 100%;
                 display: flex;
                 flex-wrap: wrap;
                 gap: size(8);
@@ -172,6 +174,7 @@
             }
 
             .odd-n-bet {
+                flex: 100%;
                 display: flex;
                 gap: size(20);
 
@@ -256,6 +259,7 @@
             }
 
             .count {
+                flex: 100%;
                 display: flex;
                 align-items: center;
                 gap: size(8);
@@ -273,8 +277,8 @@
     @include max-to(pc) {
         .game-detail {
             .content {
-                height: calc((100svw - size(60)*2 - size(28)*2) * .6 * .6 + size(20));
-                // (window width - section padding - card padding) * game-zone flex * height ratio + 20px
+                height: calc((100svw - size(60)*2 - size(28)*2) * .6 * .6 + size(40));
+                // (window width - section padding - card padding) * game-zone flex * height ratio + 40px
             }
         }
     }
@@ -284,9 +288,6 @@
     @include max-to(laptop) {
         .game-detail {
             .content {
-                height: calc((100svw - size(60)*2 - size(28)*2) * .6 * .6 + size(40));
-                // (window width - section padding - card padding) * game-zone flex * height ratio + 40px
-
                 .awards {
                     .award-list {
                         height: size(60);
