--- a/pre/scss/components/_fulldown.scss
+++ b/pre/scss/components/_fulldown.scss
@@ -29,6 +29,7 @@
                     text-align: center;
 
                     >a {
+                        width: 100%;
                         display: block;
                         padding: size(10) size(24);
                         cursor: pointer;
