--- a/pre/scss/components/_popUp.scss
+++ b/pre/scss/components/_popUp.scss
@@ -16,6 +16,7 @@
         background-color: black;
         border-radius: size(20);
         padding: size(28);
+        min-width: size(510);
         max-width: size(800);
         max-height: 80svh;
         box-shadow: 0 0 size(40) 0 rgba(color(primary-4), 0.56);
