--- a/pre/scss/layout/_main.scss
+++ b/pre/scss/layout/_main.scss
@@ -747,6 +747,8 @@ main {
 
                 img {
                     margin-bottom: size(32);
+                    max-width: size(240);
+                    @include radius(15);
                 }
 
                 p {
