首頁排版微調 (詳見說明)
1. 教學區塊高度改為彈性
2. 字體斷點改為 pad (1024)
3. 每日任務小網尺寸調整

--- a/pre/scss/_var.scss
+++ b/pre/scss/_var.scss
@@ -140,6 +140,10 @@ $colors: map-merge($colors, (gray-1: mix(white, color(gray), 80%),
 @mixin radius($pc: 30, $m: 15) {
     border-radius: size($pc);
 
+    @include max-to(pc) {
+        border-radius: svw($pc);
+    }
+
     @include max-to(small-pad) {
         border-radius: size($m);
     }
