--- a/pre/scss/components/_font.scss
+++ b/pre/scss/components/_font.scss
@@ -59,7 +59,7 @@ a {
     text-align: center;
 }
 
-@include max-to(laptop) {
+@include max-to(pad) {
     .title-xl {
         font-size: size(30);
     }
@@ -100,7 +100,6 @@ a {
 
     .capital {
         font-size: size(12);
-
     }
 }
 
@@ -109,7 +108,7 @@ a {
     font-size: size(18);
     line-height: 1.5;
 
-    @include max-to(laptop) {
+    @include max-to(pad) {
         font-size: size(15);
         line-height: 1.3;
     }
@@ -119,7 +118,7 @@ a {
     font-size: size(15);
     line-height: 1.5;
 
-    @include max-to(laptop) {
+    @include max-to(pad) {
         font-size: size(13);
         line-height: 1.3;
     }
@@ -127,9 +126,8 @@ a {
 
 @mixin capital {
     font-size: size(14);
-    font-weight: weight(Medium);
 
-    @include max-to(laptop) {
+    @include max-to(pad) {
         font-size: size(12);
     }
 }
