更新小網彈窗尺寸 & 移除 AOS 套件

--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -753,6 +753,7 @@ body {
 @media (max-width: 1024px) {
   #mainPage .popUp .popUp--container {
     width: calc(100svw - 2rem);
+    min-width: auto;
   }
 }
 #mainPage #login ul {
