--- a/pre/scss/components/_popUp.scss
+++ b/pre/scss/components/_popUp.scss
@@ -79,6 +79,10 @@
         .popUp--container {
             width: calc(100svw - size(32));
             min-width: auto;
+
+            .popUp--content {
+                min-width: auto;
+            }
         }
     }
 }
