--- a/pre/scss/components/_buttons.scss
+++ b/pre/scss/components/_buttons.scss
@@ -14,6 +14,7 @@ a.button {
     padding: size(10) size(24);
     transition-property: background-color;
     @include body-2;
+    width: 100%;
 
     &:hover {
         background-color: color(primary-6);
