--- a/pre/scss/pages/_personal.scss
+++ b/pre/scss/pages/_personal.scss
@@ -228,31 +228,8 @@
         }
     }
 
-    .record {
+    #record {
         flex: 100%;
-
-        &-price {
-            div {
-                display: flex;
-                align-items: center;
-                gap: size(8);
-
-                img {
-                    width: size(20);
-                }
-            }
-        }
-
-        &-status {
-            span {
-                display: flex;
-                gap: 0 size(8);
-            }
-        }
-
-        &-view {
-            min-width: size(124);
-        }
 
         .filter {
             display: flex;
@@ -339,6 +316,33 @@
             }
         }
 
+        .record- {
+            &price {
+                div {
+                    display: flex;
+                    align-items: center;
+                    gap: size(8);
+
+                    img {
+                        width: size(20);
+                    }
+                }
+            }
+
+            &status {
+                span {
+                    display: flex;
+                    gap: 0 size(8);
+                }
+            }
+
+            &view {
+                .button {
+                    min-width: max-content;
+                }
+            }
+        }
+
         .no-record {
             padding: size(20) 0;
             display: flex;
@@ -388,7 +392,7 @@
 
     // pad ~ 1024
     @include max-to(pad) {
-        .record {
+        #record {
             .filter {
                 justify-content: flex-start;
                 margin-bottom: size(32);
@@ -434,10 +438,13 @@
                                     display: flex;
                                     align-items: center;
                                     justify-content: space-between;
+                                }
 
-                                    span {
-                                        @include body-2;
-                                    }
+                                &time,
+                                &status,
+                                &trackno,
+                                &price {
+                                    @include body-2;
                                 }
 
                                 &view {
@@ -447,7 +454,7 @@
                                     justify-content: center;
                                     order: 3;
 
-                                    button {
+                                    .button {
                                         flex: 100%;
                                     }
                                 }
